<resources>
    <string name="app_name">Oktpus</string>
    <string name="user_logo">User</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title">OKTPUS</string>
    <string name="nav_item_signup">Sign up</string>
    <string name="nav_item_login">Log in</string>
    <string name="nav_item_logout">Log out</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_saved_searches">Saved Searches</string>
    <string name="nav_item_notif_history">Notification History</string>
    <string name="nav_item_wall_of_deals">Wall of Deals</string>
    <string name="nav_item_wmcw">What\'s My Car Worth?</string>
    <string name="nav_item_garage">Garage</string>
    <string name="nav_item_tnc">Terms &amp; Conditions</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_compare_cars">Compare Cars</string>
    <string name="nav_item_car_insurance">Car Insurance</string>
    <string name="nav_item_car_finance">Car Finance</string>
    <string name="nav_item_car_parts">Car Parts</string>
    <string name="nav_item_coupon">Coupon</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_signup</item>
        <item>@string/nav_item_login</item>
        <item>@string/nav_item_search</item>
        <item>@string/nav_item_wall_of_deals</item>
        <item>@string/nav_item_tnc</item>
        <item>@string/nav_item_about</item>
    </string-array>
    <string-array name="nav_drawer_labels_logged_in_social">
        <item>@string/nav_item_search</item>
        <item>@string/nav_item_saved_searches</item>
        <item>@string/nav_item_wall_of_deals</item>
        <item>@string/nav_item_notif_history</item>
        <item>@string/nav_item_logout</item>
    </string-array>
    <string-array name="nav_drawer_labels_logged_in">
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_search</item>
        <item>@string/nav_item_saved_searches</item>
        <item>@string/nav_item_wall_of_deals</item>
        <item>@string/nav_item_garage</item>
        <item>@string/nav_item_notif_history</item>
        <item>@string/nav_item_logout</item>
    </string-array>
    <string name="home_banner">Search engine for used cars at your fingertips.</string>
    <string name="home_learnmore">Learn more</string>
    <string name="refined_search">Refined Search</string>
    <string name="wod_header">WALL OF DEALS</string>
    <string name="wod_sub_header">All cars 10% below market average</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_pwd_link">Forgot password?</string>
    <string name="forgot_pwd_title">Forgot Password</string>
    <string name="forgot_pwd_desc">Enter the e-mail address associated with your Oktpus account,
        then click Continue. We\'ll send you a link to a page where you can easily create a new password.</string>
    <string name="action_send">Send</string>
    <string name="err_login_msg">Email or password is incorrect</string>
    <string name="create_account">Create Account</string>
    <string name="reset_pwd_title">Reset Password</string>
    <string name="reset_pwd_desc">Thank You! \n \nYou will receive an email to reset your password on</string>
    <string name="mic_msg">Say something</string>
    <string name="success_login">Login successful</string>
    <string name="sign_up_success">"Signed up succcessfully. Logging in.."</string>
    <string name="forgot_pwd_err_no_acc_linked">"No account is linked with that email"</string>
    <string name="prompt_pass2">Re-type Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="sign_up_link">Create New Account</string>
    <string name="prompt_enter_email">Enter E-mail</string>
    <string name="prompt_pass1">Choose password</string>
    <string name="prompt_pass1_desc">Password must include atleast one lowercase letter, one uppercase letter and one digit</string>
    <string name="error_password_mismatch">Passwords not identical</string>
    <string name="signup_agreement_msg1">By signing up you agree to our</string>
    <string name="signup_agreement_msg2"><u>Terms &amp; Conditions</u></string>
    <string name="already_have_account">Already have an account?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="invalid_pwd">Password has to contain more than 6 characters</string>
    <string name="search_btn_new">Search</string>
    <string name="pull_to_refresh_msg">Pull to refresh results</string>
    <string name="chkbox_save_search">Save this search</string>
    <string name="chkbox_receive_notif">Receive notifications*</string>
    <string name="new_search">NEW SEARCH</string>
    <string name="btn_new_search">New search</string>
    <string name="clear_form">Clear Form</string>
    <string name="edit_search">EDIT SEARCH </string>
    <string name="form_bottom_msg">*Registration is required to receive notifications. If you decide to \'Receive Notifications\' for this search, you will start receiving email notifications when new car arrivals match your filters.</string>
    <string name="search_query_hint">Type to filter</string>
    <string name="more_options">MORE OPTIONS</string>
    <string name="multi_unit_change_to">Change to  </string>
    <string name="img0_label">Include Cars Without Images</string>
    <string name="receive_notif_label">Receive notifications</string>
    <string name="launch_search_label">Launch the search</string>
    <string name="delete_search_label">Delete the search</string>
    <string name="launch"><u>Launch</u></string>
    <string name="delete"><u>Delete</u></string>
    <string name="saved_search">Saved Search</string>
    <string name="save_and_search">Save and search</string>
    <string name="column_model_title">MODEL</string>
    <string name="column_date_title">DATE</string>
    <string name="no_notif_result_msg">NO NOTIFICATIONS FOUND</string>
    <string name="select">Select</string>
    <string name="selected">\u0020Selected</string>
    <string name="default_model_header">Choose a make first</string>
    <string name="no_model_avail">No Models found for make</string>
    <string name="msg_loading">Loading ...</string>
    <string name="newest_arrivals">Newest Arrivals</string>
    <string name="most_relevant">Most Relevant</string>
    <string name="pr_low_high">Price: Low to High</string>
    <string name="pr_high_low">Price: High to Low</string>
    <string name="yr_old_new">Year: Old to New</string>
    <string name="yr_new_old">Year: New to Old</string>
    <string name="save">Save</string>
    <string name="change_pwd">Change password</string>
    <string name="bma_msg_attr"><i>* If Below Market Average filter is set, Receive Notifications cannot be selected (Paid users only)</i></string>
    <string name="bma_msg_receive_notif"><i>* If Below Market Average filter is set, Receive Notifications cannot be selected (Paid users only)</i></string>
    <string name="search_hint_1">Ex. \"white bmw suv\"</string>
    <string name="search_hint_2">Ex. \"honda civic 2012\"</string>
    <string name="search_hint_3">Ex. \"toyota camry 2010\"</string>
    <string name="search_hint_4">Ex. \"black automatic sedan\"</string>
    <string-array name="search_hints">
        <item>@string/search_hint_1</item>
        <item>@string/search_hint_2</item>
        <item>@string/search_hint_3</item>
        <item>@string/search_hint_4</item>
    </string-array>
    <string name="about_login"><u>Login</u></string>
    <string name="about_signup"><u>Sign-up</u></string>
    <string name="create_new_ac"><u>Create New Account</u></string>
    <string name="create_new_ac_bl">Create New Account</string>
    <string name="sf_create_ac_desc">Join Oktpus today to receive car deals in your email.</string>
    <string name="header_geo_prefix">Searching in and around&#160;</string>
    <string name="header_geo_suffix_all_cities"><u>all cities</u></string>
    <string name="no_items">No items</string>
    <string name="no_results">No results found</string>
    <string name="no_more_results">No more results found</string>
    <string name="no_results_desc">Try changing the search filters, you can also save this search and receive email notifications on new arrivals.</string>
    <string name="no_more_results_desc">You can save this search and receive email notifications on new arrivals.</string>
    <string name="no_results_desc_common">Simply check the "Receive Notifications" checkbox in Search Filters.</string>
    <string name="msg_failed_to_connect">Failed to connect. Please try again!</string>
    <string name="msg_connecting">Connecting ..</string>
    <string name="msg_failed_to_load">Failed to load</string>
    <string name="label_market_avg_above">Above market by</string>
    <string name="label_market_avg_below">Below market by</string>
    <string name="modal_headline">Find the car that fits your budget and taste on Oktpus</string>
    <string name="modal_tag_desc"><b>Easily find good deals</b> with our below market average filter</string>
    <string name="modal_globe_desc"><b>All used car sites in one</b> single search</string>
    <string name="modal_notif_desc"><b>Never miss a deal</b> thanks to real time notifications</string>
    <string name="btn_geo">Location</string>
    <string name="price_filter">Price Filter</string>
    <string name="bma_filter">Try this filter</string>
    <string name="receive_notif">Email Notifications</string>
    <string name="receive_notif_desc">Select Receive Notifications and click on Search to save this search and receive notifications. \n \n Sign up now to start receiving car deals in your email.</string>
    <string name="price_filter_desc">You can try setting a minimum price to filter out cars without a price.</string>
    <string name="bma_filter_desc">Easily find good deals with our below market average filter.</string>
    <string name="geo_desc">Click the orange icon to locate more precisely your geographic position</string>
    <string name="fav_feature">Garage</string>
    <string name="fav_feature_desc">You can see all your Favorites in Menu > Garage</string>
    <string name="item_hide">Hide</string>
    <string name="item_add_to_compare_list">Add to Compare List</string>
    <string name="item_see_car_parts">See Car Parts</string>
    <string name="item_car_review">Car Review</string>
    <string name="item_car_recall">Car Recalls</string>
    <string name="compare_list_full">Add limit reached. Cannot add more than 5 items</string>
    <string name="item_already_added">Item already added to compare cars list!</string>
    <string name="items_in_list">Items added: </string>
    <string name="item_added_to_list"> added to compare list</string>
    <string name="wmcw_subtitle">Get the most out of your car with our expert market evaluation based on</string>
    <string name="wmcw_subtitle_bullet_1">your car\'s model and mileage</string>
    <string name="wmcw_subtitle_bullet_2">similar cars recently sold and currently for sale</string>
    <string name="wmcw_subtitle_bullet_3">your location</string>
    <string name="title_feedback">Write us</string>
    <string name="version_name">Version 4.3.0</string>
    <string name="copyright_">Copyright © 2018 Oktpus International Inc.</string>
</resources>