<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/modal_tag"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textAlignment="gravity"
            android:layout_gravity="center_vertical"
            android:text="@string/modal_tag_desc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/modal_globe"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/normal_text"
            android:text="@string/modal_globe_desc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/modal_notif" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:textSize="@dimen/normal_text"
            android:layout_gravity="center_vertical"
            android:text="@string/modal_notif_desc"/>
    </LinearLayout>
</LinearLayout>