<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/layout_page_title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wmcw_subtitle"
            android:textColor="#000"
            android:textSize="22sp"
            android:padding="15dp"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal|bottom"
            android:textAlignment="center"
            android:id="@+id/tv_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_horizontal"
            android:layout_below="@+id/tv_header"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.7">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="10dp"
                        android:src="@drawable/tick_green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAlignment="gravity"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/wmcw_subtitle_bullet_1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="10dp"
                        android:src="@drawable/tick_green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAlignment="gravity"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/wmcw_subtitle_bullet_2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="10dp"
                        android:src="@drawable/tick_green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAlignment="gravity"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/wmcw_subtitle_bullet_3"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@color/white"
        android:layout_marginBottom="48dp"
        android:layout_gravity="center"
        android:gravity="center">
        <include layout="@layout/layout_button"
            android:id="@+id/btn_get_started"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>