<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/not_logged_in_background" />
    <include layout="@layout/not_logged_in_title_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_below="@+id/title_bar">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/container_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/logo_homepage"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <!--<TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/learn_more_txt"
                        android:gravity="center"/>-->

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_state_change"
                        android:textColor="@color/buttonText"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:text="@string/nav_item_wall_of_deals"
                        android:id="@+id/btn_wall_of_deals"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_gradient_black"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:text="@string/nav_item_search"
                        android:id="@+id/btn_start_search"
                        android:layout_marginBottom="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center|bottom"
                        android:layout_marginBottom="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/about_login"
                            android:id="@+id/about_login"
                            android:paddingRight="10dp"/>
                        <View
                            android:layout_width="1dp"
                            android:background="@color/colorAccent"
                            android:layout_height="10dp"
                            android:gravity="center_horizontal"
                            android:layout_marginBottom="3dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/about_signup"
                            android:id="@+id/about_signup"
                            android:paddingLeft="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</RelativeLayout>
